--- a/main.conf
+++ b/main.conf
@@ -5,7 +5,7 @@ dns-server = 114.114.114.114, 119.29.29.29, 8.8.8.8
 loglevel = notify
 
 [Proxy]
-Proxy = custom,104.160.34.215,443,aes-256-cfb,doctor_d,https://dl.dropboxusercontent.com/u/356582699/SSEncrypt.module,tcp-fast-open=true
+Proxy = custom,104.160.34.215,443,aes-256-cfb,doctor_d,https://github.com/zuoming-d/Shadowsocks/blob/master/SSEncrypt.module,tcp-fast-open=true
 
 [Rule]
 DOMAIN-KEYWORD,ads,REJECT
